[package]
name = "rust-encryption-tool"
version = "0.1.0"
authors = ["0x0mini"]
edition = "2024"
description = "A command-line tool for file encryption and decryption using Rust."
repository = "https://github.com/0x0mini/rust-encryption-tool"
license = "MIT"
keywords = ["encryption", "security", "aes", "cli"]
homepage = "https://github.com/0x0mini/rust-encryption-tool"

[dependencies]
clap = "3.1.18"
aes = "0.7.5"
rand = "0.8.5"
ring = "0.16.20"
config = "0.13.1"
